--- a/client/index.html
+++ b/client/index.html
@@ -1,18 +1,7 @@
-<!-- <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>My task list</title>
-  </head>
-  <body>
-    <h1>Index Page</h1>
-  </body>
-</html> -->
-
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MyTaskList</title>
+    <title>Angular QuickStart</title>
     <base href="/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,7 +15,7 @@
 
     <script src="systemjs.config.js"></script>
     <script>
-      System.import('app').catch(function(err){ console.error(err); });
+      System.import('main.js').catch(function(err){ console.error(err); });
     </script>
   </head>
 
